# commerce-multi-agent-customer-care

./: .gitignore  README.md  pyproject.toml  start_ecommerce.bat
a2a_azure/: .gitignore  LICENSE  README.md  __init__.py  agent.py  agent_card.py  agent_executor.py  host_agent.py  host_agent_executor.py  pyproject.toml  server.py
a2a_azure/examples/: csv_agent.py  host_agent.py  sql_agent.py
ecommerce/: README.md  __init__.py  start_all.py  test.md
ecommerce/agents/: __init__.py  customer_support_agent.py  dispute_resolution_host.py  email_agent.py  fraud_agent.py  inventory_agent.py  order_agent.py  payment_agent.py  shipping_agent.py
ecommerce/database/: chc.py  init_database.py
ecommerce/mcp_servers/: customer_support_mcp.py  ecommerce_mcp.py  email_mcp.py  fraud_mcp.py  inventory_mcp.py  order_mcp.py  payment_mcp.py  shipping_mcp.py
mail/: check.py  email_to_agent.py
